# ff-three

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FORGE_CORE_SYNC.md  NEXT.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
docs/: PLUGIN_VS_DRIVER.md
domain/agents/: Cargo.toml  README.md
domain/agents/src/: assessment.rs  curriculum.rs  lib.rs  mentor.rs  orchestrator.rs
domain/characters/: Cargo.toml  README.md
domain/characters/examples/: basic_npc.rs  daily_schedule.rs
domain/characters/src/: character.rs  commands.rs  errors.rs  goals.rs  lib.rs  memory.rs  planner.rs  reducer.rs  relationships.rs  schedule.rs  stats.rs  tick.rs
domain/characters/tests/: determinism.rs
domain/quests/: Cargo.toml  README.md
domain/quests/src/: lib.rs  reducer.rs  rules.rs  state.rs
domain/world/: Cargo.toml  README.md
domain/world/src/: engine.rs  knowledge.rs  lib.rs
foundation/events/: Cargo.toml  README.md
foundation/events/src/: academy.rs  character.rs  commands.rs  envelope.rs  lib.rs  store.rs
foundation/types/: Cargo.toml  README.md
foundation/types/src/: errors.rs  ids.rs  lib.rs  rng.rs  snapshot.rs  tick_context.rs  time.rs  traits.rs
foundation/types/src/models/: achievement.rs  assessment.rs  biome.rs  group.rs  knowledge.rs  mod.rs  quest.rs  sandbox.rs  student.rs
infra/: Pulumi.dev.yaml  Pulumi.yaml  index.ts  package-lock.json  package.json
migrations/: 001_enum_types.sql  002_tables.sql  003_indexes.sql  004_seed_biomes.sql  005_event_store.sql  006_projections.sql
plugins/: README.md
plugins/plugin-llm-free/: Cargo.toml
plugins/plugin-llm-free/src/: catalog.rs  client.rs  lib.rs  types.rs
plugins/plugin-llm-free/src/providers/: groq.rs  llm7.rs  mod.rs  nvidia.rs  ollama.rs  openrouter.rs  sambanova.rs
runtime/drivers/: Cargo.toml  README.md
runtime/drivers/src/: lib.rs
runtime/drivers/src/llm/: catalog.rs  mod.rs  types.rs
runtime/drivers/src/llm/providers/: groq.rs  llm7.rs  mod.rs  nvidia.rs  ollama.rs  openrouter.rs  sambanova.rs
runtime/projections/: Cargo.toml  README.md
runtime/projections/src/: character_view.rs  lib.rs
runtime/sandbox/: Cargo.toml  README.md
runtime/sandbox/src/: executor.rs  lib.rs  scanner.rs
runtime/server/: Cargo.toml  README.md
runtime/server/src/: config.rs  error.rs  event_store.rs  llm.rs  main.rs  state.rs
runtime/server/src/db/: achievements.rs  assessments.rs  biomes.rs  groups.rs  mod.rs  quests.rs  sandbox.rs  students.rs
runtime/server/src/routes/: achievements.rs  biomes.rs  characters.rs  curriculum.rs  groups.rs  mod.rs  quests.rs  sandbox.rs  students.rs
runtime/server/src/sim/: mod.rs  projection_worker.rs  tick_worker.rs
