[package]
name        = "quests"
description = "Academy domain – quest business logic and reducers"
version.workspace = true
edition.workspace = true

[dependencies]
types  = { workspace = true }
events = { workspace = true }
anyhow = { workspace = true }
uuid   = { workspace = true }
chrono = { workspace = true }
