[package]
name        = "events"
description = "ForgeFabrik Academy – foundation: all academy events and commands"
version.workspace = true
edition.workspace = true

[dependencies]
types       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
uuid        = { workspace = true }
chrono      = { workspace = true }
async-trait = { workspace = true }
thiserror   = { workspace = true }
